src/frontend/apps/impress/src/cunningham/cunningham-style.css
@import url('@gouvfr-lasuite/ui-kit/style');
@import url('./cunningham-tokens.css');

:root {
  /**
  * Input
  */
  --c--components--forms-input--border-radius--hover: var(
    --c--components--forms-input--border-radius
  );
  --c--components--forms-input--border-radius--focus: var(
    --c--components--forms-input--border-radius
  );
  --c--components--forms-input--border-color--hover: var(
    --c--components--forms-input--border-color
  );

  /**
  * Datepicker
  **/
  --c--components--forms-datepicker--border-color--hover: var(
    --c--components--forms-datepicker--border-color
  );

  /**
  * Select
  **/
  --c--components--forms-select--value-color--disabled: var(
    --c--globals--colors--gray-400
  );

  /**
  * Button
  **/
  --c--components--button--border-radius--active: var(
    --c--components--button--border-radius
  );
}

/**
 * Button
*/
.c__button {
  contain: content;
}

.c__button:disabled {
  cursor: unset;
}

.c__button:focus-visible {
  outline: none;
}

.c__button--medium {
  min-height: var(--c--components--button--medium-height);
  height: auto;
}

/**
 * Modal
*/
.c__modal__backdrop {
  z-index: 1000;
}

.c__modal__scroller {
  padding: var(--c--globals--font--sizes--md);
}

.c__modal__title {
  padding: 0;
  display: block;
}

.c__modal__footer {
  background-color: transparent;
}

.c__modal__close .c__button {
  right: 0;
  top: 0;
  position: relative;
}

.c__modal__close {
  position: absolute;
  top: 4px;
  right: 4px;
}

/**
 * Tooltip
*/
.c__tooltip {
  padding: var(--c--globals--spacings--t) var(--c--globals--spacings--xxs);
  text-align: center;
}

.c__tooltip .react-aria-OverlayArrow svg {
  display: none;
}

/**
* Toast
*/
.c__toast__container {
  z-index: -1;
}

.c__toast__container:has(.c__toast) {
  z-index: 10000;
}

